--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
+html, body {
   margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
+}
+
+body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
@@ -22,4 +29,6 @@ body {
 
 #root {
   width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
